--- a/src/index.css
+++ b/src/index.css
@@ -46,12 +46,12 @@ header h1 {
   font-size: 36px;
 }
 
-/*h2 {
+h2 {
   margin: 0;
   font-size: 30px;
   text-align: center;
 }
-*/
+
 nav ul {
   list-style-type: none;
   padding: 0;
